@@ -1,6 +1,8 @@
 DIST pg-0.7.9.2008.08.17.gem 57344 RMD160 3a68d54dfcf6de3facc7203e288ce049c193e11c SHA1 ad569cade4a5ac3c7074a7261ed11bd1c56c1f32 SHA256 bb1623447aecb0387adf8abe43859e63851b529b6d16fdb679a71c21c8b3f3f1
 DIST pg-0.7.9.2008.10.05.gem 57344 RMD160 948381f59f6fd09e6858366a3cadb73c1e77e819 SHA1 2f2cca008531f20bc18195bbc219197d6f6febeb SHA256 9211b028cb5d5ad302058fc76b0a637cd0b8f485ade3eff40046a752b68c6d9d
+DIST pg-0.8.0.gem 71680 RMD160 4d966f6eb01f9341e9bc6adac8f0367798f9cf2c SHA1 a00a560068901f13a01a814f7d98e47f7d494f0a SHA256 6b3319d7cce4fdaaa2ab149bec70dadeaeb21889f92fb4a7e37fbda0bac2c9c0
 EBUILD ruby-pg-0.7.9.20080817.ebuild 721 RMD160 ef29baa5cebceca4411af1223ece5c2fc9b2ba15 SHA1 379587acdcca22dcb7efae0428eb6d4855df22fe SHA256 8f19e99ae624012efff582fdc9a4cc2e10eccae850e0a5482423ebd5a37409aa
 EBUILD ruby-pg-0.7.9.20081005.ebuild 721 RMD160 6493ea9ac46e0eea5d500f23c3c5563890b24205 SHA1 549c740945ab7e1b37f5569518134c110b16a3e5 SHA256 612a9c4643b0536dbdafc8f26645588898a11d28674616bb365a77e1d3c9d728
-MISC ChangeLog 374 RMD160 7814c76a1ce592c8c2be1906d7f5bf14bd91fd8d SHA1 0aae8769abf85b0242e2c5246e712d6a38e60c31 SHA256 6ab7dcacd4af5b2af4e04ff0656f15a82145c682b01f4d145768c9dfe8b4840a
+EBUILD ruby-pg-0.8.0.ebuild 550 RMD160 65eb7a97a807699248165d2ae98c4a873681fd4d SHA1 dc4407700e912840a6768f0876ddf26f3d07e9ad SHA256 8ec4cbd0e248bd79022441471b07f00661f0494752040eff95e02b8193badbe6
+MISC ChangeLog 477 RMD160 79253b05fe8811f7f7584b795deb4664f52a2435 SHA1 d25a61c3c8cb3b137733bc7330d4a5c5b790d9b4 SHA256 d38cc25eb5c4bb0c044697b0d6829d06bf9087db9589462c3b62c8f49bfbad7b
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
